[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/Gui/UiElements/Button_Item_common_Square.png" type="Texture" id=2]
[ext_resource path="res://tscn/item/itemBtn.gd" type="Script" id=4]
[ext_resource path="res://res/font/b.tres" type="DynamicFont" id=6]

[node name="item" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 1
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 4 )

[node name="imgNode" type="Node2D" parent="."]
position = Vector2( 32, 32 )

[node name="img" type="TextureRect" parent="imgNode"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -26.0
margin_right = 26.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 26, 26 )
expand = true

[node name="Label" type="Label" parent="."]
margin_top = 46.0
margin_right = 60.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.772549, 0.772549, 0.772549, 1 )
custom_fonts/font = ExtResource( 6 )
align = 2

[connection signal="mouse_entered" from="." to="." method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_item_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_item_pressed"]
